@@ -1,5 +1,5 @@
 // -*- MPC -*-
-// $Id:
+// $Id$
 
 project(ACE_RLECompression) : ace_compressionlib, install, ace_output {
   sharedname   = *
@@ -15,6 +15,6 @@ project(ACE_RLECompression) : ace_compressionlib, install, ace_output {
   }
 
   specific {
-    install_dir = ace/lib
+    install_dir = ace/Compression/rle
   }
 }
