@@ -1,3 +1,12 @@
+Fri Feb 24 08:45:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Compression/ACE_Compression.mpc:
+        * ace/Compression/rle/ACE_RLECompression.mpc:
+          Fixed id and install problems
+
+        * bin/fuzz.pl:
+          Extended check for incorrect id tags
+
 Thu Feb 23 08:20:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Compression/Compressor.h:
